# snake

./: .gitignore  CMakeLists.txt  README.md  best.pth  best_t.pth  main.c  main.py  pnet.pth  pyproject.toml  snake.c  snake.cpp  snake.h  snake.py  snake_env.py  target_net.pth
